header spacing fixed

--- a/style.scss
+++ b/style.scss
@@ -696,7 +696,7 @@ h1 {
   font-size: 50px;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 1);
   text-align: center;
-  padding: 40px 20px;
+  padding: 40px 20px 0 20px;
 }
 
 h1.head-text a {
